@@ -1,5 +1,7 @@
 = master
 
+* Add disallow_file_uploads plugin for raising an exception if a multipart file upload is attempted (jeremyevans)
+
 * Add strip_path_prefix plugin for stripping prefixes off of internal absolute paths, making them relative paths (jeremyevans)
 
 * Add Roda.expand_path method to DRY up path expansion (jeremyevans)
